<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
	android:background="#c0c3c6">
	
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_weight="1">
		
		<Switch
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_gravity="center_horizontal"
			android:layout_margin="5dp"
			android:layout_weight="1"
			android:gravity="center"
			android:id="@+id/serviceSwitch"
			android:text=""
			android:textColor="#616161"
			android:background="#f2f2f2"/>

		<Button
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_gravity="center_horizontal"
			android:layout_margin="5dp"
			android:layout_weight="1"
			android:onClick="setting"
			android:text="@string/main_button_setting"
			android:textColor="#616161"
			android:background="#f2f2f2"/>

		<Button
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_gravity="center_horizontal"
			android:layout_margin="5dp"
			android:layout_weight="1"
			android:onClick="buyActivity"
			android:text="@string/main_button_purchase"
			android:textColor="#616161"
			android:background="#f2f2f2"/>

		<Button
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_gravity="center_horizontal"
			android:layout_margin="5dp"
			android:layout_weight="1"
			android:onClick="info"
			android:text="@string/main_button_info"
			android:textColor="#616161"
			android:background="#f2f2f2"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_gravity="center_horizontal"
			android:layout_margin="5dp"
			android:layout_weight="1"
			android:id="@+id/mainLayout">
		</LinearLayout>
		
	</LinearLayout>
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_weight="1"
		android:orientation="vertical"
		android:gravity="center">
		
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_gravity="center_horizontal"
			android:layout_margin="5dp"
			android:layout_weight="1" />
		
		<Button
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_gravity="center_horizontal"
			android:layout_margin="5dp"
			android:layout_weight="4"
			android:onClick="errorWithUpdate"
			android:text="@string/main_button_error"
			android:textColor="#616161"
			android:background="#f2f2f2"/>
		
	</LinearLayout>
	
</LinearLayout>
